--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "gatsby-starter-default",
-  "description": "Gatsby default starter",
+  "name": "great-gatsby",
+  "description": "Voltera Home Page",
   "version": "1.0.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Jesus Zozaya <jesus@voltera.io>",
   "dependencies": {
     "gatsby": "^0.12.45",
     "object-assign": "^4.1.1",
     "react-helmet": "^5.0.3",
+    "react-scroll-components": "^0.2.2",
     "react-typography": "^0.15.0",
     "typography-breakpoint-constants": "^0.14.0",
     "typography-plugin-code": "^0.15.9"
