--- a/package.json
+++ b/package.json
@@ -6,13 +6,23 @@
   "dependencies": {
     "gatsby": "^0.12.45",
     "object-assign": "^4.1.1",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-addons-test-utils": "^15.5.1",
     "react-helmet": "^5.0.3",
-    "react-scroll-components": "^0.2.2",
-    "react-typography": "^0.15.0",
-    "typography-breakpoint-constants": "^0.14.0",
-    "typography-plugin-code": "^0.15.9"
+    "react-svg-inline": "^2.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.3",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-standard": "^3.0.1",
     "gh-pages": "^0.12.0"
   },
   "keywords": [
