--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
+    "react-favicon": "0.0.5",
     "react-helmet": "^5.0.3",
-    "react-svg-inline": "^2.0.0"
+    "react-svg-inline": "^2.0.0",
+    "react-youtube": "^7.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
