--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "gatsby": "^0.12.45",
     "object-assign": "^4.1.1",
-    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.0.3",
+    "react-lazy-load": "^3.0.12",
     "react-svg-inline": "^2.0.0",
     "react-youtube": "^7.4.0"
   },
