--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-test-utils": "^15.5.1",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.0.3",
+    "react-image-lightbox": "^3.4.3",
     "react-lazy-load": "^3.0.12",
     "react-svg-inline": "^2.0.0",
     "react-youtube": "^7.4.0"
