--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "author": "Jesus Zozaya <jesus@voltera.io>",
   "dependencies": {
     "gatsby": "^0.12.45",
+    "google-map-react": "^0.24.0",
     "object-assign": "^4.1.1",
+    "rc-collapse": "^1.7.5",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.0.3",
-    "react-image-lightbox": "^3.4.3",
     "react-lazy-load": "^3.0.12",
     "react-svg-inline": "^2.0.0",
     "react-youtube": "^7.4.0"
