--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "gatsby": "^0.12.45",
     "google-map-react": "^0.24.0",
+    "moment": "^2.18.1",
     "object-assign": "^4.1.1",
     "rc-collapse": "^1.7.5",
     "react": "^15.5.4",
     "react-addons-test-utils": "^15.5.1",
+    "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.0.3",
