--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bowser": "^1.7.1",
     "gatsby": "^1.0.1",
     "gatsby-link": "^1.0.1",
+    "gatsby-plugin-google-analytics": "^1.0.3",
     "gatsby-plugin-react-helmet": "^1.0.1",
     "gatsby-plugin-sass": "^1.0.1",
     "google-map-react": "^0.24.0",
