--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^0.48.0",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.1.3",
+    "react-router": "^4.1.2",
     "react-svg-inline": "^2.0.0",
     "react-youtube": "^7.4.0"
   },
