--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-favicon": "0.0.5",
     "react-helmet": "^5.1.3",
     "react-router": "^4.1.2",
+    "react-router-dom": "^4.2.2",
     "react-svg-inline": "^2.0.0",
-    "react-youtube": "^7.4.0"
+    "react-youtube": "^7.4.0",
+    "shopify-buy": "^0.7.1"
   },
   "keywords": [
     "gatsby"
