--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.18.1",
     "query-string": "^5.0.0",
     "react": "^15.6.1",
+    "react-cookie": "^2.0.8",
     "react-datepicker": "^0.48.0",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.1.3",
