--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-router-dom": "^4.2.2",
     "react-svg-inline": "^2.0.0",
     "react-youtube": "^7.4.0",
-    "shopify-buy": "^0.7.1"
+    "shopify-buy": "^0.7.1",
+    "universal-cookie": "^2.1.0"
   },
   "keywords": [
     "gatsby"
