--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-datepicker": "^0.48.0",
     "react-favicon": "0.0.5",
     "react-helmet": "^5.1.3",
+    "react-lazyload": "^2.2.7",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.2.2",
     "react-svg-inline": "^2.0.0",
