--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-svg-inline": "^2.0.0",
     "react-youtube": "^7.4.0",
     "shopify-buy": "^0.7.1",
-    "universal-cookie": "^2.1.0"
+    "universal-cookie": "^2.1.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "keywords": [
     "gatsby"
