--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-sass": "^1.0.1",
     "google-map-react": "^0.24.0",
     "moment": "^2.18.1",
+    "node-fetch": "^1.7.3",
     "query-string": "^5.0.0",
     "react": "^15.6.2",
     "react-datepicker": "^0.48.0",
