--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "Jesus Zozaya <jesus@voltera.io>",
   "dependencies": {
     "bowser": "^1.7.1",
+    "es6-object-assign": "^1.1.0",
+    "es6-promise": "^4.2.4",
     "gatsby": "^1.9.119",
     "gatsby-link": "^1.0.1",
     "gatsby-plugin-google-analytics": "^1.0.3",
