--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bowser": "^1.9.3",
     "gatsby": "^2.0.42",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-google-fonts": "0.0.4",
@@ -20,6 +21,7 @@
     "gatsby-plugin-sharp": "^2.0.12",
     "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-shopify2": "^2.0.6",
     "gatsby-transformer-remark": "^2.1.12",
     "gatsby-transformer-sharp": "^2.1.8",
     "moment": "^2.22.2",
@@ -30,6 +32,7 @@
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.6.1",
     "react-helmet": "^5.1.3",
+    "react-instantsearch-dom": "^5.3.2",
     "react-lazyload": "^2.2.7",
     "react-svg-inline": "^2.1.1",
     "react-youtube": "^7.8.0",
