--- a/package.json
+++ b/package.json
@@ -5,38 +5,39 @@
   "author": "Jesus Zozaya <jesus@voltera.io>",
   "dependencies": {
     "bowser": "^1.9.3",
-    "gatsby": "^2.0.42",
-    "gatsby-image": "^2.0.20",
+    "gatsby": "^2.0.59",
+    "gatsby-image": "^2.0.22",
     "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
-    "gatsby-plugin-google-analytics": "^2.0.6",
+    "gatsby-plugin-google-analytics": "^2.0.8",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-intercom-spa": "0.0.5",
-    "gatsby-plugin-manifest": "^2.0.8",
-    "gatsby-plugin-offline": "^2.0.13",
+    "gatsby-plugin-manifest": "^2.0.11",
+    "gatsby-plugin-offline": "^2.0.18",
     "gatsby-plugin-prefetch-google-fonts": "^1.0.11",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-sass": "^2.0.4",
-    "gatsby-plugin-sharp": "^2.0.12",
-    "gatsby-plugin-sitemap": "^2.0.2",
-    "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-plugin-react-helmet": "^3.0.3",
+    "gatsby-plugin-sass": "^2.0.5",
+    "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-sitemap": "^2.0.3",
+    "gatsby-source-filesystem": "^2.0.10",
     "gatsby-source-shopify2": "^2.0.6",
-    "gatsby-transformer-remark": "^2.1.12",
-    "gatsby-transformer-sharp": "^2.1.8",
+    "gatsby-transformer-remark": "^2.1.15",
+    "gatsby-transformer-sharp": "^2.1.9",
     "moment": "^2.22.2",
-    "node-fetch": "^2.2.1",
+    "node-fetch": "^2.3.0",
     "node-sass": "^4.10.0",
     "query-string": "^5.1.1",
-    "react": "^16.6.1",
+    "react": "^16.6.3",
     "react-datepicker": "^1.8.0",
-    "react-dom": "^16.6.1",
+    "react-dom": "^16.6.3",
     "react-helmet": "^5.1.3",
     "react-instantsearch-dom": "^5.3.2",
     "react-lazyload": "^2.2.7",
+    "react-responsive": "^6.0.1",
     "react-svg-inline": "^2.1.1",
     "react-youtube": "^7.8.0",
-    "shopify-buy": "^1.10.0",
+    "shopify-buy": "^1.11.0",
     "universal-cookie": "^2.2.0"
   },
   "keywords": [
@@ -51,6 +52,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.15.1"
+    "prettier": "^1.15.3"
   }
 }
