--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-hotjar": "^1.0.1",
     "gatsby-plugin-intercom-spa": "0.0.5",
     "gatsby-plugin-manifest": "^2.0.11",
+    "gatsby-plugin-netlify": "^2.0.6",
     "gatsby-plugin-offline": "^2.0.18",
     "gatsby-plugin-prefetch-google-fonts": "^1.0.11",
     "gatsby-plugin-react-helmet": "^3.0.3",
