--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^2.0.26",
     "gatsby-plugin-algolia": "^0.3.0",
     "gatsby-plugin-facebook-pixel": "^1.0.3",
+    "gatsby-plugin-google-analytics": "^2.0.9",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-google-gtag": "^1.0.8",
     "gatsby-plugin-hotjar": "^1.0.1",
