--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.10",
     "google-fonts-plugin": "^2.0.2",
+    "jspdf": "^1.5.3",
     "moment": "^2.23.0",
     "node-fetch": "^2.3.0",
     "node-sass": "^4.11.0",
