--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "author": "Jesus Zozaya <jesus@voltera.io>",
   "dependencies": {
-    "bowser": "^1.9.3",
+    "bowser": "^2.1.0",
     "gatsby": "^2.0.91",
     "gatsby-image": "^2.0.26",
     "gatsby-plugin-algolia": "^0.3.0",
@@ -39,7 +39,7 @@
     "react-helmet": "^5.1.3",
     "react-instantsearch-dom": "^5.3.2",
     "react-lazyload": "^2.2.7",
-    "react-responsive": "^6.0.1",
+    "react-media": "^1.9.2",
     "react-svg-inline": "^2.1.1",
     "react-youtube": "^7.8.0",
     "shopify-buy": "^1.11.0",
