--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-datepicker": "^1.8.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.1.3",
+    "react-hubspot-form": "^1.3.7",
     "react-instantsearch-dom": "^5.3.2",
     "react-lazyload": "^2.2.7",
     "react-media": "^1.9.2",
